--- a/src/app/features/resource-management/components/all-teams-timesheet/all-teams-timesheet.component.html
+++ b/src/app/features/resource-management/components/all-teams-timesheet/all-teams-timesheet.component.html
@@ -46,6 +46,8 @@
 
                 <!-- Customer Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Customer</label>
+
                     <select [(ngModel)]="customerFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Customer</option>
@@ -61,6 +63,8 @@
 
                 <!-- Project Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Project</label>
+
                     <select [(ngModel)]="projectFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Project</option>
@@ -76,6 +80,8 @@
 
                 <!-- Employee Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Employee</label>
+
                     <select [(ngModel)]="userNameFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Employee</option>
@@ -91,6 +97,8 @@
 
                 <!-- project manager -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Project Manager</label>
+
                     <select [(ngModel)]="projectManagerFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Project Manager</option>
@@ -106,6 +114,8 @@
 
                 <!-- project Phase -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Phase</label>
+
                     <select [(ngModel)]="phasesFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Phase</option>
@@ -121,6 +131,8 @@
 
                 <!-- Project Deliverable Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Deliverable</label>
+
                     <select [(ngModel)]="projectDeliverableFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Deliverable</option>
@@ -136,6 +148,8 @@
 
                 <!-- Timesheet Date Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Timesheet Date</label>
+
                     <input type="date" [(ngModel)]="timesheetDateFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
                     <button *ngIf="timesheetDateFilter" (click)="clearFilter('timesheetDateFilter')"
@@ -146,6 +160,8 @@
 
                 <!-- Task Status Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Task Status</label>
+
                     <select [(ngModel)]="taskStatusFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Task Status</option>
