--- a/src/app/features/timesheet/components/export-my-timesheet/export-my-timesheet.component.html
+++ b/src/app/features/timesheet/components/export-my-timesheet/export-my-timesheet.component.html
@@ -20,6 +20,8 @@
             <div class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
                 <!-- Customer Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Customer</label>
+
                     <select [(ngModel)]="customerFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Customer</option>
@@ -35,6 +37,8 @@
 
                 <!-- Project Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Project</label>
+
                     <select [(ngModel)]="projectFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Project</option>
@@ -50,6 +54,8 @@
 
                 <!-- project manager -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Project Manager</label>
+
                     <select [(ngModel)]="projectManagerFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Project Manager</option>
@@ -65,6 +71,8 @@
 
                 <!-- project Phase -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Phase</label>
+
                     <select [(ngModel)]="phasesFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Phase</option>
@@ -80,6 +88,8 @@
 
                 <!-- Project Deliverable Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Deliverable</label>
+
                     <select [(ngModel)]="projectDeliverableFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Deliverable</option>
@@ -95,6 +105,7 @@
 
                 <!-- Timesheet Date Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Date</label>
                     <input type="date" [(ngModel)]="timesheetDateFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
                     <button *ngIf="timesheetDateFilter" (click)="clearFilter('timesheetDateFilter')"
@@ -105,6 +116,8 @@
 
                 <!-- Task Status Filter -->
                 <div class="relative flex-grow">
+                    <label class="block text-xs font-medium text-gray-700 mb-1">Task Status</label>
+
                     <select [(ngModel)]="taskStatusFilter" (change)="applyFilters()"
                         class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                         <option value="">Select Task Status</option>
